--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ black = "*"
 [packages]
 django = "*"
 djangorestframework = "*"
+iso639-lang = "*"
+requests = "*"
 
 [requires]
 python_version = "3.6"
