tests: Add end-to-end tests and script to run them

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ deps = -rrequirements-dev.txt
 commands = pytest {posargs}
 passenv =
     SECRET_KEY
+    HOST
+    PORT
     REDIS_HOST
     REDIS_PORT
 setenv =
