--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,3 +1,4 @@
+-i https://pypi.org/simple
 appdirs==1.4.4
 asgiref==3.3.1; python_version >= '3.5'
 attrs==20.3.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
@@ -10,11 +11,11 @@ dataclasses==0.8; python_version < '3.7'
 distlib==0.3.1
 django==3.1.6
 djangorestframework==3.12.2
-drf-spectacular==0.13.1
+drf-spectacular==0.13.2
 filelock==3.0.12
 flake8==3.8.4
 gunicorn==20.0.4
-hypothesis==6.1.1
+hypothesis==6.2.0
 idna==2.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 importlib-metadata==3.4.0; python_version < '3.8'
 importlib-resources==5.1.0; python_version < '3.7'
@@ -28,11 +29,13 @@ mypy-extensions==0.4.3
 packaging==20.9; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pathspec==0.8.1
 pluggy==0.13.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+profilehooks==1.12.0
 py==1.10.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pycodestyle==2.6.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pyflakes==2.2.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pyparsing==2.4.7; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pyrsistent==0.17.3; python_version >= '3.5'
+pytest-asyncio==0.14.0
 pytest-cov==2.11.1
 pytest-django==4.1.0
 pytest==6.2.2
@@ -45,7 +48,7 @@ six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3
 sortedcontainers==2.3.0
 sqlparse==0.4.1; python_version >= '3.5'
 toml==0.10.2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
-tox==3.21.4
+tox==3.22.0
 typed-ast==1.4.2
 typing-extensions==3.7.4.3; python_version < '3.8'
 uritemplate==3.0.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
