--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,10 @@ drf-spectacular = "*"
 iso639-lang = "*"
 redis = "*"
 gunicorn = "*"
+aioredis = "*"
 
 [requires]
 python_version = "3.6"
+
+[pipenv]
+allow_prereleases = true
