--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,6 +1,8 @@
 -i https://pypi.org/simple
+aioredis==1.3.1
 appdirs==1.4.4
 asgiref==3.3.1; python_version >= '3.5'
+async-timeout==3.0.1; python_full_version >= '3.5.3'
 attrs==20.3.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 black==20.8b1
 certifi==2020.12.5
@@ -15,6 +17,7 @@ drf-spectacular==0.13.2
 filelock==3.0.12
 flake8==3.8.4
 gunicorn==20.0.4
+hiredis==1.1.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 hypothesis==6.2.0
 idna==2.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 importlib-metadata==3.4.0; python_version < '3.8'
