--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -11,12 +11,13 @@ click==7.1.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 
 coverage==5.4; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
 dataclasses==0.8; python_version < '3.7'
 distlib==0.3.1
-django==3.1.6
+django==3.1.7
 djangorestframework==3.12.2
 drf-spectacular==0.13.2
 filelock==3.0.12
 flake8==3.8.4
 gunicorn==20.0.4
+h11==0.12.0; python_version >= '3.6'
 hiredis==1.1.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 hypothesis==6.2.0
 idna==2.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
@@ -56,5 +57,6 @@ typed-ast==1.4.2
 typing-extensions==3.7.4.3; python_version < '3.8'
 uritemplate==3.0.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 urllib3==1.26.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
+uvicorn==0.13.3
 virtualenv==20.4.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 zipp==3.4.0; python_version >= '3.6'
