--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ line-length = 85
 [tool.tox]
 legacy_tox_ini = """
 [tox]
-envlist = py{36,37}-{functional,performance}
+envlist = py{36,37}
 isolated_build = True
 
 [testenv]
